[project]
name = "my_a2a_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=1.1.1",
    "bedrock-agentcore-starter-toolkit==0.2.2",
    "strands-agents[a2a]>=1.19.0",
    "strands-agents-tools>=0.2.17",
]
